capitalize Listing, Figure, and Table

--- a/paper/coreutils.tex
+++ b/paper/coreutils.tex
@@ -4,7 +4,7 @@ The GNU Core Utilities project (henceforth ``coreutils'') comprises over 100 pro
 We hypothesized that coreutils would yield very few crashes or hangs. Primarily, the project is extremely mature: in 2002, the GNU fileutils, textutils, and sh-utils projects merged into the GNU coreutils project, by which point all three projects already had a substantial development history. In the same vein, the binaries from the coreutils project are used in production environments all over the world, and therefore have undergone a significant amount of testing. Additionally, these utilities in general comprise a relatively small number of files and lines of code; therefore, we hypothesized that they would be easier to write correctly compared to larger open-source projects.
 
 \subsubsection{Results}
-In order to assess the robustness of coreutils when given error return values from a variety of calls, we selected 51 of the coreutils programs (table \ref{lst:coreutils}) and tested them on the aforementioned 19 calls. Of the 51 utilities that we tested, 13 (25.5\%) crashed for at least one of the wrapped calls (table \ref{lst:coreutils}). The crashes seen were isolated to the memory allocation calls \texttt{malloc}, \texttt{calloc}, and \texttt{realloc}. 
+In order to assess the robustness of coreutils when given error return values from a variety of calls, we selected 51 of the coreutils programs (Table \ref{lst:coreutils}) and tested them on the aforementioned 19 calls. Of the 51 utilities that we tested, 13 (25.5\%) crashed for at least one of the wrapped calls (Table \ref{lst:coreutils}). The crashes seen were isolated to the memory allocation calls \texttt{malloc}, \texttt{calloc}, and \texttt{realloc}. 
 
 Utilities that produced core dumps were analyzed via \texttt{gdb} in order to find the offending code. In all cases analyzed, a null pointer dereference occurred due to a failure to check the return value of either \texttt{malloc}/\texttt{calloc}/\texttt{realloc}, or a helper function which performed the memory allocation (Appendix \ref{appendix:coreutils}).
 
