--- a/paper/largescale.tex
+++ b/paper/largescale.tex
@@ -1,4 +1,4 @@
-In addition to the smaller utilities discussed above, we tested a collection of large-scale open-source applications (table \ref{tab:large_scale_versions}). Admittedly, we do not offer a well-defined distinction between small and large-scale, but we loosely define large-scale as applications that are composed of substantial codebases and represent long-term projects from major vendors. We believe that these applications are an important portion of our testing suite because they demonstrate the scale that modern applications can achieve today and could not in 1995 for Miller et al. Furthermore, we expected to find more crashes and hangs in applications of these types, following the common wisdom that larger programs are generally more difficult to get correct.
+In addition to the smaller utilities discussed above, we tested a collection of large-scale open-source applications (Table \ref{tab:large_scale_versions}). Admittedly, we do not offer a well-defined distinction between small and large-scale, but we loosely define large-scale as applications that are composed of substantial codebases and represent long-term projects from major vendors. We believe that these applications are an important portion of our testing suite because they demonstrate the scale that modern applications can achieve today and could not in 1995 for Miller et al. Furthermore, we expected to find more crashes and hangs in applications of these types, following the common wisdom that larger programs are generally more difficult to get correct.
 
 \begin{table}[h!]
 \begin{center}
