--- a/paper/preload.tex
+++ b/paper/preload.tex
@@ -12,7 +12,7 @@ There are several limitations to this method. Significantly, statically linked a
 Another limitation to our method is that it is Linux-specific. \texttt{LD\_PRELOAD} is found on many Linux distributions and some other UNIX systems, such as BSD \cite{bsd}. However, there are equivalents found on other popular systems such as the \texttt{AppInit\_DLLs} registry value on Windows \cite{dll} and the \texttt{DYLD\_INSERT\_LIBRARIES} environment variable on macOS \cite{macos}. Therefore, we feel confident that this methodology could find success when applied to applications on the most common commodity operating systems.
 
 \subsubsection{Implementation}\label{ld_preload_implementation}
-For each call of interest, we created a position-independent shared library object containing a single wrapper function with the name of the call. The wrapper simply returns an error value with probability $p$, or calls the real version of the function with probability $1-p$. In this way, we probabilistically either inject an error value, or allow the application to continue as usual. A visual representation of this mechanism is given in figure \ref{fig:ld_preload}. Each program of interest was tested with one call being intercepted at a time.
+For each call of interest, we created a position-independent shared library object containing a single wrapper function with the name of the call. The wrapper simply returns an error value with probability $p$, or calls the real version of the function with probability $1-p$. In this way, we probabilistically either inject an error value, or allow the application to continue as usual. A visual representation of this mechanism is given in Figure \ref{fig:ld_preload}. Each program of interest was tested with one call being intercepted at a time.
 
 This probabilistic approach is used to attempt to test all of the calls to a given function within an application. If error values were returned 100\% of the time, we would not be able to evaluate program behavior on all possible code paths. For example, if a program calls \texttt{malloc} in two locations and crashes or aborts after an error value is returned from the first, then the second call will never be reached. To account for different program structures, we tested each call for each program on a variety of error return probabilities, ranging from 1\% to 50\%. Applications that make a particular call many times require a lower probability of returning an error in order to cover all possible code paths. Likewise, applications that make a particular call (e.g. \texttt{fork}) infrequently require a higher probability of returning an error in order to cover all possible code paths.
 \begin{figure}
