--- a/paper/preload.tex
+++ b/paper/preload.tex
@@ -4,7 +4,7 @@ We needed a way to intercept system and library calls made by an application in 
 Using the environment variable \texttt{LD\_PRELOAD}, a user can specify a shared library object that is loaded before any others at dynamic linking time \cite{ldpreload}. Importantly, functions within this shared library take precedence over any other functions of the same name, even ones found in \texttt{libc} and other standard libraries.
 
 \subsubsection{Benefits of LD\_PRELOAD}
-\texttt{LD\_PRELOAD} affords several benefits to the amateur fuzz tester. Primarily, it is extremely simple to work with, and therefore difficult to get wrong: just set an environment variable and run the (dynamically linked) binary. We took this approach in order to test a greater number of calls and utilities as quickly as possible, but given more time we may have opted to use binary rewriting. Furthermore, this method enables the interception of calls many levels deep in the stack, even in other dynamically linked libraries. We perceive this to be a benefit, as programs which depend on shared libraries are taking on the risk that those libraries are written incorrectly.
+\texttt{LD\_PRELOAD} affords several benefits to the amateur fuzz tester. Primarily, it is extremely simple to work with, and therefore difficult to get wrong: just set an environment variable and run the (dynamically linked) binary. We took this approach in order to test a greater number of calls and utilities as quickly as possible, but given more time we may have opted to use binary rewriting. Furthermore, this method enables the interception of calls many levels deep in the stack, even in other dynamically linked libraries. We perceive this to be a benefit, as programs that depend on shared libraries are taking on the risk that those libraries are written incorrectly.
 
 \subsubsection{Limitations of LD\_PRELOAD}
 There are several limitations to this method. Significantly, statically linked applications bypass our wrappers completely; however, we did not encounter any statically linked applications. Other approaches, such as the binary rewriting techniques used by Miller et al. \cite{bart} or a dynamic instrumentation tool such as DynInst \cite{dyninst}, circumvent this issue by modifying the binary directly, and would be necessary to expand coverage to statically linked programs.
