--- a/paper/largescale.tex
+++ b/paper/largescale.tex
@@ -54,7 +54,7 @@ One difficulty in testing large-scale applications is determining the set of beh
 
 The results of our tests display a variety of behaviors across the applications that we tested. For the calls tested, every application (with the exception of VirtualBox) crashed or hung for at least one call. Of those, every one (with the exception of \texttt{gcc}) crashed or hung for more than one call. We observed 15 crashes and 22 hangs, which suggests that these applications are slightly more resilient to errors that would lead to core dumps. 
 
-When we first started testing large-scale applications we encountered core dumps for nearly every application for many calls, but determined that they were caused by calls to \texttt{abort}. Many of these aborts were caused by the GLib library on the application's behalf. GLib is collection of low-level system libraries developed mainly for the GNOME project. These libraries implement a variety of commonly used data structures, string manipulation functions, and a thread package (built on \texttt{pthread}) \cite{glibman}. We found that nearly all applications that are window-based used GLib to aid in window management. An investigation of the current GLib source reveals that after being passed through a number of internal functions, an erroneous return value was eventually passed to the \texttt{g\_error} function, which prints an error message and aborts the program. This use of GLib helps explain why large-scale applications are more resilient to crashes over hangs. It also displays some of the difficulty that can arise when determining if an application truly crashed during testing. Finally, it shows that one way to avoid crashes and hangs in applications is for one group to get the code right once and then share it with other developers.
+When we first started testing large-scale applications we encountered core dumps for nearly every application for many calls, but determined that they were caused by calls to \texttt{abort}. Many of these aborts were caused by the GLib library on the application's behalf. GLib is collection of low-level system libraries developed mainly for the GNOME project. These libraries implement a variety of commonly used data structures, string manipulation functions, and a thread package (built on \texttt{pthread}) \cite{glibman}. We found that nearly all applications that are window-based used GLib to aid in window management. An investigation of the current GLib source reveals that after being passed through several internal functions, an erroneous return value was eventually passed to the \texttt{g\_error} function, which prints an error message and aborts the program. This use of GLib helps explain why large-scale applications are more resilient to crashes over hangs. It also displays some of the difficulty that can arise when determining if an application truly crashed during testing. Finally, it shows that one way to avoid crashes and hangs in applications is for one group to get the code right once and then share it with other developers.
 
 
 
