--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -4,4 +4,4 @@ Error handling takes many forms in the programs that were tested. For example, o
 
 Nearly all of the applications we tested displayed aberrant behavior that is likely not what the developers intended, but this sort of behavior was too subjective for us to meaningfully measure. Nevertheless, we do include some of the more interesting aberrant behaviors that we found while testing.
 
-In order to assess as large a representative sample of available programs as possible, we decided to focus on two major subgroups: small-scale (command-line) utilities, and large-scale (primarily GUI-based) programs. We restricted our sample to open-source projects, so as to be able to debug with source code available. Within small-scale utilities, we selected three groups to focus on: GNU Core Utilities (e.g. \texttt{ls}), the \texttt{net-tools} project (e.g. \texttt{ifconfig}), and selected other common utilities, such as \texttt{make} and \texttt{grep}. Within large-scale programs, we selected a sample of some of the largest and most common desktop programs available, such as Google Chrome, Mozilla Thunderbird, and \texttt{gcc}.
+In order to assess as large a representative sample of available programs as possible, we decided to focus on two major groups: small-scale (command-line) utilities, and large-scale (primarily GUI-based) programs. We restricted our sample to open-source projects, so as to be able to debug with source code available. Within small-scale utilities, we selected three subgroups to focus on: GNU Core Utilities (e.g. \texttt{ls}), the \texttt{net-tools} project (e.g. \texttt{ifconfig}), and selected other common utilities, such as \texttt{make} and \texttt{grep}. Within large-scale programs, we selected a sample of some of the largest and most common desktop programs available, such as Google Chrome, Mozilla Thunderbird, and \texttt{gcc}.
