more writing suggestions changes

--- a/paper/largescale.tex
+++ b/paper/largescale.tex
@@ -25,7 +25,7 @@ Eclipse & Eclipse Foundation & 4.6 (Neon) \\
 \end{table}
 
 
-One difficulty in testing large-scale applications is determining the set of behaviors to test. Applications of this size offer a large set of features and many of these features do not have analogs in other applications. For example, gvim and LibreOffice offer document editing, while Firefox and Chrome offer no such analagous behavior. We therefore restricted our testing to behaviors that are exhibited by all of these applications. Most of our testing of large-scale applications consisted of invoking the application from the command-line (with \texttt{LD\_PRELOAD} set) and exiting the application shortly after successfuly startup. This tests a very narrow portion of the features offered by each application, but it offers behavior that is semantically equivalent across the applications, which allows for more meaningful comparison. Table \ref{table:large_scale} shows the results of our tests.
+One difficulty in testing large-scale applications is determining the set of behaviors to test. Applications of this size offer a large set of features and many of these features do not have analogs in other applications. For example, gvim and LibreOffice offer document editing, while Firefox and Chrome offer no such analagous behavior. We therefore restricted our testing to behaviors that are exhibited by all of these applications. Most of our testing of large-scale applications consisted of invoking the application from the command-line (with \texttt{LD\_PRELOAD} set) and exiting the application shortly after successfuly startup. This tests a narrow portion of the features offered by each application, but it offers behavior that is semantically equivalent across the applications, which allows for more meaningful comparison. Table \ref{table:large_scale} shows the results of our tests.
 
 \begin{table}[h!]
 \centering
