--- a/paper/codegen.tex
+++ b/paper/codegen.tex
@@ -1,5 +1,5 @@
 \subsection{Wrapper Generation}
-The wrappers described in section \ref{ld_preload_implementation} are uniformly structured: they contain one method, the signature of which is identical to that of the overridden call. Furthermore, nothing specific about the call's implementation is necessary for generating the wrapper. Thus, wrappers are good candidates for automatic code generation by inspection of the appropriate header files. For example, by examining the \texttt{stdlib.h} file and knowing one piece of information from the \texttt{MALLOC(3)} \texttt{man} page, we can completely construct the wrapper (Figure \ref{fig:codegen}).
+The wrappers described in Section \ref{ld_preload_implementation} are uniformly structured: they contain one method, the signature of which is identical to that of the overridden call. Furthermore, nothing specific about the call's implementation is necessary for generating the wrapper. Thus, wrappers are good candidates for automatic code generation by inspection of the appropriate header files. For example, by examining the \texttt{stdlib.h} file and knowing one piece of information from the \texttt{MALLOC(3)} \texttt{man} page, we can completely construct the wrapper (Figure \ref{fig:codegen}).
 
 \begin{figure}[h!]
 \centering
@@ -12,4 +12,4 @@ We developed an input file which contained the call name, (error) return value, 
 
 This technique has several benefits, the primary one being that it reduces development time when wanting to make small changes to all of the wrappers. For example, after starting with a wrapper that simply returns the value of the real call using \texttt{dlsym}, we want to add a ``coin flip'', which simply determines at random whether to return the correct value or the error value. It is trivial to do this via code generation, by simply adding a few lines to the script and re-running it to update all of the downstream wrappers.
 
-We are unsure whether the added development cost of this approach outweighs the potential speedup in development time. It is true that the wrapper files are only infrequently modified, however when dealing with almost 20 wrappers, it becomes increasingly tedious to make changes in a manual way. At the very least, we hope that these techniques are useful for others in the testing community.
+We are unsure whether the added development cost of this approach outweighs the potential speedup in development time. It is true that the wrapper files are only infrequently modified, however when dealing with almost 20 wrappers, it becomes increasingly tedious to make changes in a manual way. At the least, we hope that these techniques are useful for others in the testing community.
